--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link href="css/index.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
-        document.domain = 'tool.114la.com';
+        // document.domain = 'tool.114la.com';
     </script>
 </head>
     <body>
@@ -109,21 +109,7 @@
                     </div>
                     <div class="cal-right">
                         <div class="cal-right-top">
-                            <div class="cal-rightRow1 clearfix">
-                                <div class="cal-dayTil">
-                                    <span></span>
-                                    <span></span>
-                                    <span class="no-margin"></span>
-                                </div>
-                                <div class="cal-dayNubWrap fl">
-                                    <span class="cal-dayNub"></span>
-                                </div>
-                                <div class="cal-dayInfo-wrap fl">
-                                    <div class="cal-dayInfo"></div>
-                                    <div class="cal-dayInfo cal-dayInfoLast">甲午年<i>·</i>丁丑月<i>·</i>乙未日</div>
-                                    <a class="cal-dayinfo-article" href="http://tool.114la.com/live/nongli/">测测您最近的运势</a>
-                                </div>
-                            </div>
+                            <div class="cal-rightRow1 clearfix"></div>
                             <div class="cal-rightRow2 clearfix">
                                 <div class="cal-yi">
                                     <div class="cal-rightTil cal-yiTil"><i class="cal-sprites bg-suitable"></i></div>
@@ -279,9 +265,7 @@
                 <div class="new-right">
                     <div class="history-today modular">
                         <h4>历史上的今天<span class="float-right"><a href="http://tool.114la.com/historytoday">更多>></a></span></h4>
-                        <ol class="history-today-list">
-                            <li><i class="cal-sprites bg-1 vert_center"></i><a class="vert_center" href="#">讽刺文学大师--马克吐温诞辰</a></li>
-                        </ol>
+                        <ol class="history-today-list"></ol>
                     </div>
                     <div class="new-right-ad modular" style="width: 394px;height: 202px;"></div>
                 </div>
