--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link href="css/common.css" rel="stylesheet" type="text/css" />
     <link href="css/index.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
         // document.domain = 'tool.114la.com';
@@ -77,7 +78,7 @@
                                     <li value="8">国庆节</li>
                                 </ul>
                             </div>
-                            <span class="cal-todayBtn" id="cal-todayBtn">今天</span>
+                            <span class="cal-todayBtn" id="cal-todayBtn">今日</span>
                             <div class="custom-nowtime">
                                 <i class="cal-sprites bg-time vert_center"></i>
                                 <span class="vert_center js-custom-nowtime-p">北京时间 13:48:46</span>
@@ -136,7 +137,7 @@
                                 </p>
                             </div>
                             <p class="cal-right-today-info">
-                                <span class="js-limitcat">限行尾号：6和8</span>
+                                <!-- <span class="js-limitcat">限行尾号：6和8</span> -->
                                 <span class="js-air-aqi">空气质量：68</span>
                             </p>
                             <div class="cal-right-weather clearfix">加载中...</div>
@@ -178,7 +179,7 @@
                                     </div>
                                 </div>
                                 <div class="constellation-info-right fl">
-                                    <a href="">最爱老牛吃嫩草的星座</a>
+                                    <a href="11 ">最爱老牛吃嫩草的星座</a>
                                     <a href="">如何追求不同星座的人</a>
                                 </div>
                             </div>
@@ -188,13 +189,19 @@
             </div>
             <!-- 广告位置 -->
             <div class="rili-ad">
-                <ul class="clearfix">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <ul class="rili-ad-bottom-left fl" style="width:1000px;">
+                    <script type="text/javascript">
+                        /*工具箱日历中部横幅1000*120创建于 2018/1/9*/
+                        var cpro_id = "u3182081";
+                    </script>
+                    <script type="text/javascript" src="//cpro.baidustatic.com/cpro/ui/c.js"></script>
+                </ul>
+                <ul class="rili-ad-bottom-right fl" style="width:200px;">
+                    <script type="text/javascript">
+                        /*工具箱日历中部横幅200*120创建于 2018/1/9*/
+                        var cpro_id = "u3182086";
+                    </script>
+                    <script type="text/javascript" src="//cpro.baidustatic.com/cpro/ui/c.js"></script>
                 </ul>
             </div>
             <!-- 新增 start -->
@@ -205,9 +212,9 @@
                         <div class="new-headline-left">
                             <!-- <p class="title">人民日报社报道今日</p> -->
                             <ul class="news-list-1">
-                                <li>·&nbsp;<a href="http://news.114la.com/info_13923.html">广西男子午休点根烟 却"嘭"一声爆炸了</a></li>
-                                <li>·&nbsp;<a href="http://news.114la.com/info_13922.html">浙江居民楼发生火灾 女子用吹风机吹内裤导致</a></li>
-                                <li>·&nbsp;<a href="http://news.114la.com/info_13920.html">北京回龙观镇镇长 腾退若业主不退租金村镇先垫</a></li>
+                                <li>·&nbsp;<a href="http://news.114la.com/info_13923.html" target="_blank">广西男子午休点根烟 却"嘭"一声爆炸了</a></li>
+                                <li>·&nbsp;<a href="http://news.114la.com/info_13922.html" target="_blank">浙江居民楼发生火灾 女子用吹风机吹内裤导致</a></li>
+                                <li>·&nbsp;<a href="http://news.114la.com/info_13920.html" target="_blank">北京回龙观镇镇长 腾退若业主不退租金村镇先垫</a></li>
                                 <li>·&nbsp;<a href="http://news.114la.com/info_13912.html">武汉电子厂起火 该厂去年曾两次发生爆炸</a></li>
                                 <li>·&nbsp;<a href="http://news.114la.com/info_13908.html">ofo回应资金告紧 退押金渠道通畅并保障押金安全</a></li>
                                 <li>·&nbsp;<a href="http://news.114la.com/info_13910.html">劳工盼日政府道歉 称想要在有生之年可以看到</a></li>
@@ -264,7 +271,7 @@
                 </div>
                 <div class="new-right">
                     <div class="history-today modular">
-                        <h4>历史上的今天<span class="float-right"><a href="http://tool.114la.com/historytoday">更多>></a></span></h4>
+                        <h4>历史上的今天<span class="js-history-date" style="color:#999;"></span><span class="float-right"><a href="http://tool.114la.com/historytoday">更多>></a></span></h4>
                         <ol class="history-today-list"></ol>
                     </div>
                     <div class="new-right-ad modular" style="width: 394px;height: 202px;"></div>
@@ -272,15 +279,9 @@
             </div>
             <!--新增 end -->
             <!-- 广告位置 -->
-            <div class="rili-ad">
-                <ul class="clearfix">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+            <div class="rili-ad clearfix">
+                <ul class="rili-ad-bottom-left fl" style="width:960px;">11</ul>
+                <ul class="rili-ad-bottom-right fl" style="width:240px;">22</ul>
             </div>
         </div>
         <footer style="height:52px;background:#333;"></footer>
@@ -289,5 +290,6 @@
         <script type="text/javascript" src="js/Selecter.js"></script>
         <script type="text/javascript" src="js/dataPicker.js"></script>
         <script type="text/javascript" src="js/new.js"></script>
+        <script type="text/javascript" src="js/newFun.js"></script>
     </body>
 </html>
